boulder/boulder/tests/compile_fail/function/ret_ty/empty_body.bo
# Mismatched types
# expected `u32`
# found `Empty`
# (5:
fn test() -> u32 { }